client: support external plugins